--- a/如何请假.md
+++ b/如何请假.md
@@ -1,7 +1,7 @@
 ### 第一步：登录易班认证平台
 <a href="https://yiban.bupt.edu.cn" target="_blank">登录页面</a>  
-该页面将会在**新窗口**打开，并跳转至**易班界面**。用户名密码为 **学号、身份证号后八位**  
-**连续按返回键2-3次 或 关闭该新标签页** 后返回本页面  
+该页面将会在**本窗口**打开，并跳转至**易班界面**。用户名密码为 **学号、身份证号后八位**  
+**连续按返回键2-3次** 后返回本页面  
 
 ### 第二部：请假系统
 [BYR请销假](https://askforleave.yiban.bupt.link/)  
