--- a/如何请假.md
+++ b/如何请假.md
@@ -3,7 +3,7 @@
 该页面将会在**本窗口**打开，并跳转至**易班界面**。用户名密码为 **学号、身份证号后八位**  
 **连续按返回键2-3次** 后返回本页面  
 
-### 第二部：请假系统
+### 第二步：请假系统
 [BYR请销假](https://askforleave.yiban.bupt.link/)  
 该页面打开后可正常请销假。如果出现500错误/跳转到易班界面，  
 1.请重新登录。若多次无效，请联系易班人员。  
